ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-server
    servicePort: 80
  rules:
  - host: laravel-kubernetes.demo
    http:
      paths:
      - path: /
        backend:
          serviceName: laravel-kubernetes-demo
          servicePort: 80
